--- a/asivamosffie.web/asivamosffie/src/app/_pages/generar-orden-giro/components/desc-dir-tecnica-gog/desc-dir-tecnica-gog.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/generar-orden-giro/components/desc-dir-tecnica-gog/desc-dir-tecnica-gog.component.html
@@ -46,6 +46,7 @@
                                 [solicitudPagoFaseFacturaDescuento]="this.solicitudPagoFaseFactura.solicitudPagoFaseFacturaDescuento"
                                 [valorNetoGiro]="listData.valorNetoGiro"
                                 [solicitudPago]="solicitudPago"
-                                [esVerDetalle]="esVerDetalle">
+                                [esVerDetalle]="esVerDetalle"
+                                (tieneObservacion)="tieneObservacion.emit( true )">
     </app-form-descuentos-gog>
 </section>
