--- a/asivamosffie.web/asivamosffie/src/app/_pages/solicitar-contratacion/components/table-solicitud-contratacion/table-solicitud-contratacion.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/solicitar-contratacion/components/table-solicitud-contratacion/table-solicitud-contratacion.component.html
@@ -82,6 +82,7 @@
                           || (element.estadoSolicitudCodigo === 'Firmado')
                           || ( element.estadoSolicitudCodigo === 'Firmado ' )
                           || ( element.estadoSolicitudCodigo === 'Registrados' )
+                          || ( element.estadoSolicitudCodigo === 'En proceso de firmas' )
                           || (element.estadoSolicitudCodigo === 'En firma del contratista')
                           || (element.estadoSolicitudCodigo === 'Rechazado por comité fiduciario' && element.registroCompleto)
                           || (element.estadoSolicitudCodigo === 'En proceso de firmas' && element.registroCompleto)
