--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-actualiz-polizas-garantias/components/tabla-observaciones-rev-aprob-rapg/tabla-observaciones-rev-aprob-rapg.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-actualiz-polizas-garantias/components/tabla-observaciones-rev-aprob-rapg/tabla-observaciones-rev-aprob-rapg.component.html
@@ -1,29 +1,62 @@
-<div class="text-center">
-    <div class="table-responsive">
-        <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8">
-            <ng-container matColumnDef="fechaRevision">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header> Fecha de revisión</th>
-                <td mat-cell *matCellDef="let element"> <b> {{ element.segundaFechaRevision | date: 'dd/MM/yyyy' }} </b></td>
-            </ng-container>
-            <ng-container matColumnDef="observacion">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header> Observaciones generales</th>
-                <td mat-cell *matCellDef="let element">
-                    <div [innerHtml]="element.observacionGeneral !== undefined ? element.observacionGeneral : ''"></div>
-                </td>
-            </ng-container>
-            <ng-container matColumnDef="estadoRevisionCodigo">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header> Estado de la revision</th>
-                <td mat-cell *matCellDef="let element">
-                    <div *ngIf="element.estadoSegundaRevision === estadosRevision.devuelta">
-                        Devuelta
-                    </div>
-                    <div *ngIf="element.estadoSegundaRevision === estadosRevision.aprobacion">
-                        Aprobada
-                    </div>
-                </td>
-            </ng-container>
-            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-            <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-        </table>
+<ng-container *ngIf="esVerDetalle === true; else noEsVerDetalle">
+    <div class="text-center">
+        <div class="table-responsive">
+            <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8 card-title-detalle">
+                <ng-container matColumnDef="fechaRevision">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header class="card-subTitle-detalle"> Fecha de revisión</th>
+                    <td mat-cell *matCellDef="let element" class="card-title-detalle border-color"> <b> {{ element.segundaFechaRevision | date: 'dd/MM/yyyy' }} </b></td>
+                </ng-container>
+                <ng-container matColumnDef="observacion">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header class="card-subTitle-detalle"> Observaciones generales</th>
+                    <td mat-cell *matCellDef="let element" class="card-title-detalle border-color">
+                        <div [innerHtml]="element.observacionGeneral !== undefined ? element.observacionGeneral : ''"></div>
+                    </td>
+                </ng-container>
+                <ng-container matColumnDef="estadoRevisionCodigo">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header class="card-subTitle-detalle"> Estado de la revision</th>
+                    <td mat-cell *matCellDef="let element" class="card-title-detalle border-color">
+                        <div *ngIf="element.estadoSegundaRevision === estadosRevision.devuelta">
+                            Devuelta
+                        </div>
+                        <div *ngIf="element.estadoSegundaRevision === estadosRevision.aprobacion">
+                            Aprobada
+                        </div>
+                    </td>
+                </ng-container>
+                <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+                <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+            </table>
+        </div>
     </div>
-</div>
+</ng-container>
+<ng-template #noEsVerDetalle>
+    <div class="text-center">
+        <div class="table-responsive">
+            <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8">
+                <ng-container matColumnDef="fechaRevision">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header> Fecha de revisión</th>
+                    <td mat-cell *matCellDef="let element"> <b> {{ element.segundaFechaRevision | date: 'dd/MM/yyyy' }} </b></td>
+                </ng-container>
+                <ng-container matColumnDef="observacion">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header> Observaciones generales</th>
+                    <td mat-cell *matCellDef="let element">
+                        <div [innerHtml]="element.observacionGeneral !== undefined ? element.observacionGeneral : ''"></div>
+                    </td>
+                </ng-container>
+                <ng-container matColumnDef="estadoRevisionCodigo">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header> Estado de la revision</th>
+                    <td mat-cell *matCellDef="let element">
+                        <div *ngIf="element.estadoSegundaRevision === estadosRevision.devuelta">
+                            Devuelta
+                        </div>
+                        <div *ngIf="element.estadoSegundaRevision === estadosRevision.aprobacion">
+                            Aprobada
+                        </div>
+                    </td>
+                </ng-container>
+                <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+                <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+            </table>
+        </div>
+    </div>
+</ng-template>
