--- a/asivamosffie.web/asivamosffie/src/app/_pages/aprobar-solicitud-liquidacion-contractual/components/tabla-liquidacion-contrato-obra/tabla-liquidacion-contrato-obra.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/aprobar-solicitud-liquidacion-contractual/components/tabla-liquidacion-contrato-obra/tabla-liquidacion-contrato-obra.component.html
@@ -91,7 +91,7 @@
           class="btn-table"
           [routerLink]="['aprobarRequisitosParaLiquidacion', element.contratacionProyectoId]"
         >
-          <span *ngIf="element.estadoAprobacionLiquidacionCodigo === '0' || element.estadoAprobacionLiquidacionCodigo == null">Aprobar requisitos para liquidación</span>
+          <span *ngIf="element.estadoAprobacionLiquidacionCodigo === '0' || element.estadoAprobacionLiquidacionCodigo == null || element.estadoAprobacionLiquidacionCodigo == ''">Aprobar requisitos para liquidación</span>
           <span *ngIf="element.estadoAprobacionLiquidacionCodigo === '1' || element.estadoAprobacionLiquidacionCodigo === '2'">Ver detalle/Editar</span>
         </a>
         <button
