--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-tramite-liq-contractual/components/tabla-liquidacion-obra-gtlc/tabla-liquidacion-obra-gtlc.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-tramite-liq-contractual/components/tabla-liquidacion-obra-gtlc/tabla-liquidacion-obra-gtlc.component.html
@@ -9,48 +9,72 @@
 </div>
 <div class="tabla-expansion-panel">
     <table mat-table [dataSource]="dataSource" matSort class="tabla mat-elevation-z8 text-center">
-        <ng-container matColumnDef="fechaAprobacion">
+        <ng-container matColumnDef="fechaAprobacionLiquidacion">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Fecha de aprobación </th>
-            <td mat-cell *matCellDef="let element"> <b>{{element.fechaAprobacion}}</b> </td>
+            <td mat-cell *matCellDef="let element"> <b>{{element.fechaAprobacionLiquidacion}}</b> </td>
         </ng-container>
-        <ng-container matColumnDef="fechaActualizacionPoliza">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header style="width: 10%;"> Fecha de actualización de póliza
-            </th>
-            <td mat-cell *matCellDef="let element"> <b>{{element.fechaActualizacionPoliza}}</b> </td>
+        <ng-container matColumnDef="fechaPoliza">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header style="width: 10%;"> Fecha de actualización de póliza </th>
+            <td mat-cell *matCellDef="let element"> <b>{{element.fechaPoliza}}</b> </td>
         </ng-container>
-        <ng-container matColumnDef="numeroSolicitud">
+        <ng-container matColumnDef="numeroSolicitudLiquidacion">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Número de solicitud </th>
-            <td mat-cell *matCellDef="let element"> {{element.numeroSolicitud}} </td>
+            <td mat-cell *matCellDef="let element"> {{element.numeroSolicitudLiquidacion}} </td>
         </ng-container>
         <ng-container matColumnDef="numeroContrato">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Número de contrato </th>
             <td mat-cell *matCellDef="let element"> {{element.numeroContrato}} </td>
         </ng-container>
-        <ng-container matColumnDef="valor">
+        <ng-container matColumnDef="valorSolicitud">
             <th mat-header-cell *matHeaderCellDef mat-sort-header style="width: 15%;"> Valor </th>
-            <td mat-cell *matCellDef="let element"> {{element.valor}} </td>
+            <td mat-cell *matCellDef="let element"> {{element.valorSolicitud | currency:'USD':'symbol':'1.0'}} </td>
         </ng-container>
-        <ng-container matColumnDef="cantProyectosAsociados">
+        <ng-container matColumnDef="proyectosAsociados">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Cantidad de proyectos asociados </th>
-            <td mat-cell *matCellDef="let element"> {{element.cantProyectosAsociados}} </td>
+            <td mat-cell *matCellDef="let element"> {{element.proyectosAsociados}} </td>
         </ng-container>
-        <ng-container matColumnDef="estadoVerifiacion">
+        <ng-container matColumnDef="estadoTramiteLiquidacionString">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Estado de la verifiación </th>
-            <td mat-cell *matCellDef="let element"> {{element.estadoVerifiacion}} </td>
+            <td mat-cell *matCellDef="let element"> {{element.estadoTramiteLiquidacionString}} </td>
         </ng-container>
-        <ng-container matColumnDef="gestion">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Gestión </th>
+        <ng-container matColumnDef="contratacionProyectoId">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header>
+            Gestión
+            </th>
             <td mat-cell *matCellDef="let element">
-                <a [routerLink]="['verificarRequisitos', element.id]" mat-raised-button color="accent" class="btn-table"
-                    *ngIf="element.estadoVerifiacion=='Sin verificación'">Verificar requisitos para liquidación </a>
-                <a [routerLink]="['verDetalleVerificacion', element.id]" mat-raised-button color="accent"
-                    class="btn-table" *ngIf="element.estadoVerifiacion!='Sin verificación'">Ver detalle</a>
-                <!--
-                     <a [routerLink]="['verDetalleEditarVerificacion', element.id]" mat-raised-button color="accent" class="btn-table"
-                    *ngIf="element.estadoVerifiacion!='Sin verificación'">Ver detalle/Editar</a>
-                -->
+            <a *ngIf="element.estadoTramiteLiquidacionCodigo !== '3'"
+                mat-button
+                mat-raised-button
+                color="accent"
+                class="btn-table"
+                [routerLink]="['verificarRequisitos', element.contratacionProyectoId]"
+            >
+                <span *ngIf="element.estadoTramiteLiquidacionCodigo === '0' || element.estadoTramiteLiquidacionCodigo == null || element.estadoTramiteLiquidacionCodigo == ''">Verificar requisitos para liquidación</span>
+                <span *ngIf="element.estadoTramiteLiquidacionCodigo === '1' || element.estadoTramiteLiquidacionCodigo === '2'">Ver detalle/Editar</span>
+            </a>
+            <button
+                *ngIf="element.estadoTramiteLiquidacionCodigo === '2'"
+                mat-button
+                mat-raised-button
+                color="accent"
+                class="btn-table"
+                type="button"
+                (click)="SendToFinalLiquidation(element.contratacionProyectoId)"
+            >
+                Enviar para liquidación
+            </button>
+            <a *ngIf="element.estadoTramiteLiquidacionCodigo === '3'"
+                mat-button
+                mat-raised-button
+                color="accent"
+                class="btn-table"
+                type="button"
+                [routerLink]="['verDetalleVerificacion', element.contratacionProyectoId]"
+            >
+                Ver detalle
+            </a>
             </td>
-        </ng-container>
+      </ng-container>
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
         <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
     </table>
