--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-tramite-liq-contractual/components/verificar-informe-gtlc/verificar-informe-gtlc.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-tramite-liq-contractual/components/verificar-informe-gtlc/verificar-informe-gtlc.component.html
@@ -1,163 +1,125 @@
-<section class="container text-center">
-    <div class="text-right">
-        <a routerLink="/gestionarTramiteLiquidacionContractual/verificarRequisitos/1" mat-button color="primary"
-            class="btn-regresar">
-            <img src="assets/img/icon/regresar.svg" alt="Regresar">
+<section class="container" *ngIf="data">
+    <div class="text-center">
+      <div class="text-right">
+        <a routerLink="../.." mat-button color="primary" class="btn-regresar">
+          <img src="assets/img/icon/regresar.svg" alt="Regresar" />
         </a>
+      </div>
+      <h1 class="title-menu--h1">
+        <span *ngIf="!registroCompleto || registroCompleto === 'Incompleto'">Verificar informe final</span>
+        <span *ngIf="registroCompleto && registroCompleto === 'Completo'">Ver detalle/Editar verificación de Informe final</span>
+        {{ data.informeFinal.proyecto.llaveMen }}
+      </h1>
+      <p class="colorMainColor mt-1em">
+        <span class="mx-1em">
+          Fecha de envío del informe final <b> {{ data.informeFinal.fechaEnvioEtc  | date:'dd/MM/yyyy' }} </b>
+        </span>
+        <span class="mx-1em">
+          Fecha de aprobación del informe final <b> {{ data.informeFinal.fechaAprobacionFinal  | date:'dd/MM/yyyy' }} </b>
+        </span>
+      </p>
     </div>
-    <h1 class="title-menu--h1">Ver detalle informe final LL457326</h1>
-    <p class="info-sub-title">
-        <span>Fecha de envío del informe final: <b>29/11/2020</b></span>
-        <span>Fecha de aprobación del informe final: <b>29/11/2020</b></span>
-    </p>
+  
     <mat-card class="shipping-card var-main-gris">
-        <mat-card-header class="header-card  header-card--margin">
-            <mat-card-title class="header-card--text">
-                Datos del proyecto
-            </mat-card-title>
-        </mat-card-header>
-        <mat-card-content align="left">
-            <p><strong>Tipo de intervención: </strong><em>Remodelación</em></p>
-            <p><strong>Institución educativa: </strong><em>I.E Nuestra Señora del Carmén</em></p>
-            <p><strong>Sede educativa: </strong><em>Única sede</em></p>
-            <p><strong>Departamento: </strong><em>Boyacá</em></p>
-            <p><strong>Municipio: </strong><em>Susacón</em></p>
-            <p><strong>Número de contrato de obra: </strong><em>CC223456789</em></p>
-            <p><strong>Nombre del contratista de obra: </strong><em>Constructora Colpatria SAS</em></p>
-            <p><strong>Número de contrato de interventoría: </strong><em>CI8769-98076</em></p>
-            <p><strong>Nombre de contratista de interventoría: </strong><em>Constructora Bolivar</em></p>
-        </mat-card-content>
+      <mat-card-header class="header-card header-card--margin">
+        <mat-card-title class="header-card--text">
+          Datos del proyecto
+        </mat-card-title>
+      </mat-card-header>
+      <mat-card-content>
+        <p>
+          <strong>
+            Tipo de intervención:
+          </strong>
+          {{ data.informeFinal.proyecto.tipoIntervencionString }}
+        </p>
+        <p>
+          <strong>
+            Institución Educativa:
+          </strong>
+          {{ data.informeFinal.proyecto.institucionEducativa.nombre }}
+        </p>
+        <p>
+          <strong>
+            Sede:
+          </strong>
+          {{ data.informeFinal.proyecto.sede.nombre }}
+        </p>
+        <p>
+          <strong>
+            Departamento:
+          </strong>
+          {{ data.informeFinal.proyecto.departamentoObj.descripcion }}
+        </p>
+        <p>
+          <strong>
+            Municipio:
+          </strong>
+          {{ data.informeFinal.proyecto.municipioObj.descripcion }}
+        </p>
+        <p>
+          <strong>
+            Número de contrato de obra:
+          </strong>
+          {{ data.numeroContratoObra }}
+        </p>
+        <p>
+          <strong>
+            Nombre del contratista de obra:
+          </strong>
+          {{ data.nombreContratistaObra }}
+        </p>
+        <p>
+          <strong>
+          Número de contrato de interventoría:
+          </strong>
+          {{ data.numeroContratoInterventoria }}
+        </p>
+        <p>
+          <strong>
+          Nombre de contratista de interventoría:
+          </strong>
+          {{ data.nombreContratistaInterventoria }}
+        </p>
+      </mat-card-content>
     </mat-card>
-    <div class="mt-2em">
-        <mat-card class="shipping-card var-main-gris">
-            <mat-card-header class="header-card  header-card--margin">
-                <mat-card-title class="header-card--text">
-                    Recibo a satisfacción
-                </mat-card-title>
-            </mat-card-header>
-            <mat-card-content align="left">
-                <p><strong>URL Acta de recibo a satisfaccion - Obra:
-                    </strong><em>https://drive.google.com/drive/LJ776554/actadereciboasatisfaccion-obra</em></p>
-                <p><strong>Fecha de suscripción: </strong><em>30/06/2020</em></p>
-            </mat-card-content>
-        </mat-card>
-    </div>
-    <div class="mt-1em">
-        <mat-accordion>
-            <mat-expansion-panel class="expansion-style">
-                <mat-expansion-panel-header class="expansion-style--header">
-                    <mat-panel-title class="expansion-style--title">
-                        Informe final y anexos
-                    </mat-panel-title>
-                </mat-expansion-panel-header>
-                <div class="tabla-expansion-panel mt-2em">
-                    <table mat-table [dataSource]="dataSource" matSort class="tabla mat-elevation-z8 text-center">
-                        <ng-container matColumnDef="numero">
-                            <th mat-header-cell *matHeaderCellDef mat-sort-header style="width: 5%;"> No. </th>
-                            <td mat-cell *matCellDef="let element"> <b>{{element.id}}</b> </td>
-                        </ng-container>
-                        <ng-container matColumnDef="item">
-                            <th mat-header-cell *matHeaderCellDef mat-sort-header style="width: 52%;"> Ítem </th>
-                            <td mat-cell *matCellDef="let element"> {{element.item}} </td>
-                        </ng-container>
-                        <ng-container matColumnDef="tipoAnexo">
-                            <th mat-header-cell *matHeaderCellDef mat-sort-header> Tipo de anexo </th>
-                            <td mat-cell *matCellDef="let element"> {{element.tipoAnexo}} </td>
-                        </ng-container>
-                        <ng-container matColumnDef="ubicacion">
-                            <th mat-header-cell *matHeaderCellDef mat-sort-header> Ubicación (url/radicado) </th>
-                            <td mat-cell *matCellDef="let element"> <div [innerHtml]="element.ubicacion"></div>  </td>
-                        </ng-container>
-                        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-                        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-                    </table>
-                    <mat-paginator [pageSizeOptions]="[ 10, 25, 100]"></mat-paginator>
-                </div>
-            </mat-expansion-panel>
-        </mat-accordion>
-    </div>
-    <!--Se pondrá los if's-->
-    <div>
-        <div class="mt-2em">
-            <mat-card class="shipping-card var-main-gris">
-                <mat-card-header class="header-card  header-card--margin">
-                    <mat-card-title class="header-card--text">
-                        Observaciones del supervisor
-                    </mat-card-title>
-                </mat-card-header>
-                <mat-card-content align="left">
-                    <p><strong>16/11/2020</strong></p>
-                    <p><strong>¿Desde la supervisión tiene observaciones frente al informe final que deban ser tenidas
-                            en cuenta en la liquidación?: </strong><em>No</em></p>
-                </mat-card-content>
-            </mat-card>
-        </div>
-    </div>
-    <div class="mt-2em">
-        <form [formGroup]="addressForm" (ngSubmit)="onSubmit()">
-            <div class="row mtop justCenter">
-                <div class="col-md-12">
-                    <label class="label-left" for="tieneObservaciones" [ngClass]="{
-                        'color-secondaryColor':
-                          (addressForm.get('tieneObservaciones').invalid && addressForm.get('tieneObservaciones').touched) ||
-                          (addressForm.get('tieneObservaciones').invalid && estaEditando)
-                      }">¿Desde control y seguimiento tiene observaciones frente a el informe final que deban ser tenidas en cuenta en la liquidación?</label>
-                </div>
-                <div class="col-md-2">
-                    <mat-radio-group aria-labelledby="example-radio-group-label" class="radioInput"
-                        formControlName="tieneObservaciones">
-                        <mat-radio-button class="radio-button" [value]="true">Sí</mat-radio-button>
-                        <mat-radio-button class="radio-button" [value]="false">No</mat-radio-button>
-                    </mat-radio-group>
-                    <span class="required-form-group" style="margin-left: 1px;">*</span>
-                </div>
-                <span class="icon-incompleto">
-                    <img class="icon-incompleto--img" src="assets/img/icon/incompleto.svg" alt="este campo es requerido"
-                        [matTooltipPosition]="'above'"
-                        matTooltip="Debe ingresar la información en el campo para continuar"
-                        matTooltipClass="info-tooltip" *ngIf="
-                      (addressForm.get('tieneObservaciones').invalid && addressForm.get('tieneObservaciones').touched) ||
-                      (addressForm.get('tieneObservaciones').invalid && estaEditando)
-                      " />
-                </span>
-            </div>
-            <div class="d-flex align-items-center mt-2em animatedDown" *ngIf="addressForm.get('tieneObservaciones').value === true">
-                <div class="text-area-quill izqTitle"
-                [ngClass]="{
-                    'color-secondaryColor':
-                      (addressForm.get('tieneObservaciones').invalid && addressForm.get('tieneObservaciones').touched) ||
-                      (addressForm.get('tieneObservaciones').invalid && estaEditando)
-                  }">
-                    <label for="observaciones" class="text-area-quill--label" [ngClass]="{
-                        'colorMainColor':
-                          !((addressForm.get('observaciones').invalid && addressForm.get('observaciones').touched) ||
-                          (addressForm.get('observaciones').invalid && estaEditando))
-                      }">Observaciones</label>
-                    <quill-editor class="quill-editor-style" [styles]="editorStyle" [modules]="config" required
-                        (onContentChanged)="maxLength($event, 1000)" formControlName="observaciones" #observaciones></quill-editor>
-                </div>
-                <span class="contador miles" *ngIf="addressForm.get('observaciones').value">
-                    {{1000 - (textoLimpio(observaciones.quillEditor,1000))}}
-                </span>
-                <span class="contador miles" *ngIf="addressForm.get('observaciones').value === null">
-                    1000
-                </span>
-                <span class="icon-incompleto">
-                    <img class="icon-incompleto--img" src="assets/img/icon/incompleto.svg" alt="este campo es requerido"
-                        [matTooltipPosition]="'above'"
-                        matTooltip="Debe ingresar la información en el campo para continuar"
-                        matTooltipClass="info-tooltip" *ngIf="
-                      (addressForm.get('observaciones').invalid && addressForm.get('observaciones').touched) ||
-                      (addressForm.get('observaciones').invalid && estaEditando)
-                      " />
-                </span>
-            </div>
-            <div class="mb-2em mt-2em">
-                <button mat-button color="warn" class="btn-guardar mt1"
-                type="submit">
-                <img src="assets/img/icon/guardar.svg" alt="Guardar">
-            </button>
-            </div>
-        </form>
-    </div>  
-</section>
+  
+    <mat-card class="shipping-card var-main-gris">
+      <mat-card-header class="header-card header-card--margin">
+        <mat-card-title class="header-card--text">
+          Recibo a satisfacción
+        </mat-card-title>
+      </mat-card-header>
+      <mat-card-content>
+        <p>
+          <strong>
+            URL Acta de recibo a satisfaccion - Obra:
+          </strong>
+          {{ data.informeFinal.urlActa }}
+        </p>
+        <p>
+          <strong>
+            Fecha de suscripción:
+          </strong>
+          {{ data.informeFinal.fechaSuscripcion | date:'dd/MM/yyyy' }}
+        </p>
+      </mat-card-content>
+    </mat-card>
+  
+    <mat-accordion>
+      <mat-expansion-panel class="expansion-style">
+          <mat-expansion-panel-header class="expansion-style--header">
+              <mat-panel-title class="expansion-style--title">
+                Informe final y anexos
+              </mat-panel-title>
+          </mat-expansion-panel-header>
+          
+          <app-tabla-informe-anexos *ngIf="data != null && data != 'undefined'" [informeFinalId] = "data.informeFinal.informeFinalId"></app-tabla-informe-anexos>
+  
+      </mat-expansion-panel>
+    </mat-accordion>
+  
+    <app-observaciones-supervisor *ngIf="contratacionProyectoId && data" [contratacionProyectoId] = "contratacionProyectoId" [padreId] = "data.informeFinal.informeFinalId" [tipoObservacionCodigo]="listaTipoObservacionLiquidacionContratacion.informeFinal" [menuId]="listaMenu.aprobarSolicitudLiquidacionContratacion"></app-observaciones-supervisor>
+    <app-observaciones-informe-final *ngIf="contratacionProyectoId && data" [contratacionProyectoId] = "contratacionProyectoId" [informeFinalId] = "data.informeFinal.informeFinalId" [tipoObservacionCodigo]="listaTipoObservacionLiquidacionContratacion.informeFinal" [menuId]="listaMenu.gestionarSolicitudLiquidacionContratacion"></app-observaciones-informe-final>
+  
+  </section>  
