--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-tramite-liq-contractual/components/verificar-requisitos-gtlc/verificar-requisitos-gtlc.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-tramite-liq-contractual/components/verificar-requisitos-gtlc/verificar-requisitos-gtlc.component.html
@@ -1,18 +1,18 @@
-<section class="container text-center">
+<section class="container text-center" *ngIf="data">
     <div class="text-right">
         <a routerLink="/gestionarTramiteLiquidacionContractual" mat-button color="primary" class="btn-regresar">
             <img src="assets/img/icon/regresar.svg" alt="Regresar">
         </a>
     </div>
-    <h1 class="title-menu--h1">Verificar requisitos para liquidación N801801</h1>
+    <h1 class="title-menu--h1">Verificar requisitos para liquidación {{ data.numeroContrato }} </h1>
     <p class="info-sub-title">
-        <span>Fecha de actualización de póliza <b>10/11/2020</b></span>
+        <span>Fecha de actualización de póliza <b>{{ data.fechaPoliza  | date:'dd/MM/yyyy' }}</b></span>
     </p>
     <mat-card class="shipping-card var-main-gris">
         <mat-card-content align="left">
-            <p><strong>Número de contrato: N801801</strong></p>
-            <p><strong>Valor del contrato: </strong><em>$ 105.000.000</em></p>
-            <p><strong>Cantidad de proyectos asociados: </strong><em>1</em></p>
+            <p><strong>Número de contrato: {{ data.numeroContrato }} </strong></p>
+            <p><strong>Valor del contrato: </strong><em> {{data.valorSolicitud | currency:'USD':'symbol':'1.0'}} </em></p>
+            <p><strong>Cantidad de proyectos asociados: </strong><em>{{ data.proyectosAsociados }}</em></p>
         </mat-card-content>
     </mat-card>
     <p class="info-container" style="margin-top: 2em;">
@@ -27,7 +27,8 @@
                     Actualización de póliza
                 </mat-panel-title>
             </mat-expansion-panel-header>
-            <app-actualizacion-poliza-gtlc></app-actualizacion-poliza-gtlc>
+            <app-actualizacion-poliza-gtlc *ngIf="contratacionProyectoId" [contratacionProyectoId]="contratacionProyectoId" (semaforoActualizacionPoliza)="valueSemaforoActualizacionPoliza($event)"></app-actualizacion-poliza-gtlc>
+
         </mat-expansion-panel>
         <mat-expansion-panel class="expansion-style">
             <mat-expansion-panel-header class="expansion-style--header">
@@ -35,15 +36,20 @@
                     Balance financiero
                 </mat-panel-title>
             </mat-expansion-panel-header>
-            <app-tabla-balance-financiero-gtlc [verDetalleBtn]=false></app-tabla-balance-financiero-gtlc>
+            <app-tabla-balance-financiero-gtlc *ngIf="contratacionProyectoId"  [verDetalleBtn]=false [contratacionProyectoId]="contratacionProyectoId" (semaforoBalanceFinanciero)="valueSemaforoBalanceFinanciero($event)"></app-tabla-balance-financiero-gtlc>
+
         </mat-expansion-panel>
         <mat-expansion-panel class="expansion-style">
             <mat-expansion-panel-header class="expansion-style--header">
-                <mat-panel-title class="expansion-style--title sin-diligenciar">
-                    Informe final
-                </mat-panel-title>
+                <mat-panel-title
+                class="expansion-style--title"
+                [class.sin-diligenciar]="semaforoInformeFinal == 'Incompleto'"
+                [class.completo]="semaforoInformeFinal == 'Completo'"
+              >
+                Informe final
+              </mat-panel-title>
             </mat-expansion-panel-header>
-            <app-tabla-informe-final-gtlc [verDetalleBtn]=false></app-tabla-informe-final-gtlc>
+            <app-tabla-informe-final-gtlc *ngIf="contratacionProyectoId" [verDetalleBtn]=false [contratacionProyectoId]="contratacionProyectoId" (semaforoInformeFinal)="valueSemaforoInformeFinal($event)"></app-tabla-informe-final-gtlc>
         </mat-expansion-panel>
     </mat-accordion>
 </section>
