--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-solicitud-liquidacion-contractual/components/validar-informe-final/validar-informe-final.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-solicitud-liquidacion-contractual/components/validar-informe-final/validar-informe-final.component.html
@@ -6,7 +6,8 @@
       </a>
     </div>
     <h1 class="title-menu--h1">
-      Validar informe final
+      <span *ngIf="!registroCompleto || registroCompleto === 'Incompleto'">Validar informe final </span>
+      <span *ngIf="registroCompleto && registroCompleto === 'Completo'">Ver detalle/Editar validación de Informe final</span>
       {{ data.informeFinal.proyecto.llaveMen }}
     </h1>
     <p class="colorMainColor mt-1em">
