--- a/asivamosffie.web/asivamosffie/src/app/_pages/contratos-modificaciones-contractuales/components/form-registro-tramite/form-registro-tramite.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/contratos-modificaciones-contractuales/components/form-registro-tramite/form-registro-tramite.component.html
@@ -445,8 +445,12 @@
   </div>
 
   <div class="text-center" style="margin-top: 2em">
-    <button mat-button color="warn" class="btn-guardar" type="submit">
-      <img src="assets/img/icon/guardar.svg" alt="Regresar" />
+    <button mat-button
+            color="warn"
+            class="btn-guardar"
+            [disabled]="dataFormulario.dirty === false"
+            type="submit">
+            <img src="assets/img/icon/guardar.svg" alt="Regresar" />
     </button>
   </div>
 </form>
