--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-validar-requisitos-pago/components/registrar-validar-requisitos-pago/registrar-validar-requisitos-pago.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-validar-requisitos-pago/components/registrar-validar-requisitos-pago/registrar-validar-requisitos-pago.component.html
@@ -101,7 +101,8 @@
                                         || element.estadoCodigo === listaEstadoSolicitudPago.solicitudDevueltaApoyoSupervision
                                         || element.estadoCodigo === listaEstadoSolicitudPago.solicitudDevueltaPorCoordinador
                                         || element.estadoCodigo === listaEstadoSolicitudPago.enviadaSubsanacionVerificacionFinanciera
-                                        || element.estadoCodigo === listaEstadoSolicitudPago.enviadaSubsanacionValidacionFinanciera">
+                                        || element.estadoCodigo === listaEstadoSolicitudPago.enviadaSubsanacionValidacionFinanciera
+                                        || element.estadoCodigo === listaEstadoSolicitudPago.solicitudDevueltaPorGenerarOrdenGiroParaEquipoFacturacion">
                                 Ver detalle/Editar
                         </button>
 
@@ -131,7 +132,8 @@
                                             || element.estadoCodigo === listaEstadoSolicitudPago.solicitudDevueltaApoyoSupervision
                                             || element.estadoCodigo === listaEstadoSolicitudPago.solicitudDevueltaPorCoordinador
                                             || element.estadoCodigo === listaEstadoSolicitudPago.enviadaSubsanacionVerificacionFinanciera
-                                            || element.estadoCodigo === listaEstadoSolicitudPago.enviadaSubsanacionValidacionFinanciera )">
+                                            || element.estadoCodigo === listaEstadoSolicitudPago.enviadaSubsanacionValidacionFinanciera
+                                            || element.estadoCodigo === listaEstadoSolicitudPago.solicitudDevueltaPorGenerarOrdenGiroParaEquipoFacturacion )">
                                 Devolver solicitud
                         </button>
 
@@ -164,7 +166,8 @@
                                         || element.estadoCodigo === listaEstadoSolicitudPago.solicitudDevueltaApoyoSupervision
                                         || element.estadoCodigo === listaEstadoSolicitudPago.solicitudDevueltaPorCoordinador
                                         || element.estadoCodigo === listaEstadoSolicitudPago.enviadaSubsanacionVerificacionFinanciera
-                                        || element.estadoCodigo === listaEstadoSolicitudPago.enviadaSubsanacionValidacionFinanciera"> 
+                                        || element.estadoCodigo === listaEstadoSolicitudPago.enviadaSubsanacionValidacionFinanciera
+                                        || element.estadoCodigo === listaEstadoSolicitudPago.solicitudDevueltaPorGenerarOrdenGiroParaEquipoFacturacion"> 
                                 Ver detalle/Editar
                         </button>
 
@@ -186,7 +189,8 @@
                                             || element.estadoCodigo === listaEstadoSolicitudPago.solicitudDevueltaApoyoSupervision
                                             || element.estadoCodigo === listaEstadoSolicitudPago.solicitudDevueltaPorCoordinador
                                             || element.estadoCodigo === listaEstadoSolicitudPago.enviadaSubsanacionVerificacionFinanciera
-                                            || element.estadoCodigo === listaEstadoSolicitudPago.enviadaSubsanacionValidacionFinanciera )">
+                                            || element.estadoCodigo === listaEstadoSolicitudPago.enviadaSubsanacionValidacionFinanciera
+                                            || element.estadoCodigo === listaEstadoSolicitudPago.solicitudDevueltaPorGenerarOrdenGiroParaEquipoFacturacion )">
                                 Devolver solicitud
                         </button>
 
