--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-validar-requisitos-pago/components/form-registrar-solicitud-de-pago/form-registrar-solicitud-de-pago.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-validar-requisitos-pago/components/form-registrar-solicitud-de-pago/form-registrar-solicitud-de-pago.component.html
@@ -191,6 +191,7 @@
                                                     [contratacionProyectoId]="contratacionProyectoId"
                                                     [solicitudPagoCargarFormaPago]="solicitudPagoCargarFormaPago"
                                                     [tieneObservacion]="tieneObservacion !== undefined ? tieneObservacion : false"
+                                                    [tieneObservacionOrdenGiro]="tieneObservacionOrdenGiro"
                                                     (semaforoObservacion)="estadoSemaforosObservaciones.observacionCriterios = $event">
                         </app-form-criterios-pago>
                     </mat-expansion-panel>
@@ -205,6 +206,7 @@
                                                                     [solicitudPagoCargarFormaPago]="solicitudPagoCargarFormaPago"
                                                                     [tieneObservacion]="tieneObservacion !== undefined ? tieneObservacion : false"
                                                                     [listaMenusId]="listaMenusId"
+                                                                    [tieneObservacionOrdenGiro]="tieneObservacionOrdenGiro"
                                                                     [criteriosPagoProyectoCodigo]="registrarSolicitudPago.criteriosPagoProyectoCodigo"
                                                                     *ngIf="estadoRegistroCompletoSubAcordeon.amortizacionRegistroCompleto === true"
                                                                     (semaforoObservacion)="estadoSemaforosObservaciones.observacionCriteriosProyecto = $event">
@@ -217,9 +219,11 @@
                                 Datos de la factura
                             </mat-panel-title>
                         </mat-expansion-panel-header>
+
                         <app-datos-factura-construccion-rvrp    [solicitudPago]="contrato.solicitudPagoOnly"
                                                                 [datosFacturaCodigo]="registrarSolicitudPago.datosFacturaCodigo"
                                                                 [listaMenusId]="listaMenusId"
+                                                                [tieneObservacionOrdenGiro]="tieneObservacionOrdenGiro"
                                                                 [tieneObservacion]="tieneObservacion !== undefined ? tieneObservacion : false"
                                                                 *ngIf="estadoRegistroCompletoSubAcordeon.detalleFacturaRegistroCompleto === true"
                                                                 (semaforoObservacion)="estadoSemaforosObservaciones.observacionDatosFactura = $event">
@@ -251,6 +255,7 @@
                                                     [solicitudPagoCargarFormaPago]="solicitudPagoCargarFormaPago"
                                                     [tieneObservacion]="tieneObservacion !== undefined ? tieneObservacion : false"
                                                     [listaMenusId]="listaMenusId"
+                                                    [tieneObservacionOrdenGiro]="tieneObservacionOrdenGiro"
                                                     [criteriosPagoFacturaCodigo]="registrarSolicitudPago.criteriosPagoFacturaCodigo"
                                                     (semaforoObservacion)="estadoSemaforosObservaciones.observacionCriterios = $event">
                         </app-form-criterios-pago>
@@ -268,6 +273,7 @@
                                                         [tieneObservacion]="tieneObservacion !== undefined ? tieneObservacion : false"
                                                         [listaMenusId]="listaMenusId"
                                                         [amortizacionAnticipoCodigo]="registrarSolicitudPago.amortizacionAnticipoCodigo"
+                                                        [tieneObservacionOrdenGiro]="tieneObservacionOrdenGiro"
                                                         *ngIf="estadoRegistroCompletoSubAcordeon.criterioRegistroCompleto === true"
                                                         (semaforoObservacion)="estadoSemaforosObservaciones.observacionAmortizacion = $event">
                         </app-form-amortizacion-anticipo>
@@ -279,10 +285,12 @@
                                 Detalle factura para proyectos asociados
                             </mat-panel-title>
                         </mat-expansion-panel-header>
+
                         <app-detalle-factura-proyectos-asociados    [solicitudPagoCargarFormaPago]="solicitudPagoCargarFormaPago"
                                                                     [solicitudPago]="contrato.solicitudPagoOnly"
                                                                     [tieneObservacion]="tieneObservacion !== undefined ? tieneObservacion : false"
                                                                     [listaMenusId]="listaMenusId"
+                                                                    [tieneObservacionOrdenGiro]="tieneObservacionOrdenGiro"
                                                                     [criteriosPagoProyectoCodigo]="registrarSolicitudPago.criteriosPagoProyectoCodigo"
                                                                     *ngIf="estadoRegistroCompletoSubAcordeon.amortizacionRegistroCompleto === true"
                                                                     (semaforoObservacion)="estadoSemaforosObservaciones.observacionCriteriosProyecto = $event">
@@ -295,10 +303,12 @@
                                 Datos de la factura
                             </mat-panel-title>
                         </mat-expansion-panel-header>
+
                         <app-datos-factura-construccion-rvrp    [solicitudPago]="contrato.solicitudPagoOnly"
                                                                 [tieneObservacion]="tieneObservacion !== undefined ? tieneObservacion : false"
                                                                 [datosFacturaCodigo]="registrarSolicitudPago.datosFacturaCodigo"
                                                                 [listaMenusId]="listaMenusId"
+                                                                [tieneObservacionOrdenGiro]="tieneObservacionOrdenGiro"
                                                                 *ngIf="estadoRegistroCompletoSubAcordeon.detalleFacturaRegistroCompleto === true"
                                                                 (semaforoObservacion)="estadoSemaforosObservaciones.observacionDatosFactura = $event">
                         </app-datos-factura-construccion-rvrp>
@@ -319,6 +329,7 @@
                                                     [tieneObservacion]="tieneObservacion !== undefined ? tieneObservacion : false"
                                                     [datosFacturaDescuentoCodigo]="registrarSolicitudPago.datosFacturaDescuentoCodigo"
                                                     [listaMenusId]="listaMenusId"
+                                                    [tieneObservacionOrdenGiro]="tieneObservacionOrdenGiro"
                                                     *ngIf="estadoRegistroCompleto.solicitudPagoFaseRegistroCompleto === true"
                                                     (semaforoObservacion)="estadoSemaforosObservaciones.observacionDescuentos = $event">
             </app-form-descuentos-direccion-tecnica>
