--- a/asivamosffie.web/asivamosffie/src/app/_pages/fase-preconstruccion/components/expansion-gestionar-requisitos/expansion-gestionar-requisitos.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/fase-preconstruccion/components/expansion-gestionar-requisitos/expansion-gestionar-requisitos.component.html
@@ -16,7 +16,7 @@
 				<b>
 					Fecha de aprobacion de póliza:
 				</b>
-				{{ fechaPoliza | date: 'dd/MM/yyyy' }}
+				{{ fechaPoliza }}
 			</span>
 			<span class="ml-2em">
 				<b>
