--- a/asivamosffie.web/asivamosffie/src/app/_pages/compromisos-actas-comite/components/revision-acta/revision-acta.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/compromisos-actas-comite/components/revision-acta/revision-acta.component.html
@@ -267,8 +267,8 @@
                       <p>
                         <b>Responsable</b>:
                         <span class="text-color">
-                          {{ compromiso.responsableNavigation.usuario.primerNombre }}
-                          {{ compromiso.responsableNavigation.usuario.primerApellido }}
+                          {{ compromiso.responsableNavigation?.usuario?.primerNombre }}
+                          {{ compromiso.responsableNavigation?.usuario?.primerApellido }}
                         </span>
                       </p>
                       <p>
