--- a/asivamosffie.web/asivamosffie/src/app/_pages/validar-disponibilidad-presupuesto/components/tabla-en-validacion/tabla-en-validacion.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/validar-disponibilidad-presupuesto/components/tabla-en-validacion/tabla-en-validacion.component.html
@@ -38,7 +38,8 @@
         <ng-container matColumnDef="id">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Gestión </th>
             <td mat-cell *matCellDef="let element">
-                <button mat-raised-button color="accent" class="btn-table btn-table--sm" (click)="validar(element.id)">Validar</button>
+                <button mat-raised-button color="accent" class="btn-table btn-table--sm" 
+                (click)="validar(element.id, element.esNovedad, element.novedadId)">Validar</button>
             </td>
         </ng-container>
     
