validar get novedades

--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-novedades-aprobadas/components/form-detallar-solicitud-novedad/form-detallar-solicitud-novedad.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-novedades-aprobadas/components/form-detallar-solicitud-novedad/form-detallar-solicitud-novedad.component.html
@@ -167,7 +167,7 @@
                                   <mat-select required formControlName="fuenteId">
                                     <section>
                                       
-                                      <mat-option *ngFor="let u of aportante.value.listaFuentes" [value]="u.fuenteRecursosCodigo">
+                                      <mat-option *ngFor="let u of aportante.value.listaFuentes" [value]="u.fuenteFinanciacionId">
                                         {{ u.fuenteRecursosString }}
                                       </mat-option>
                                     </section>
